@@ -57,17 +57,15 @@ map_supervisionLabel_seg_alwaysTrue
 $dense_cpt_spec
 $mean_spec
 $covar_spec
-$gamma_spec
-$mc_spec
-$mx_spec
 
 #else
 
 DENSE_CPT_IN_FILE INPUT_PARAMS_FILENAME ascii
-REAL_MAT_IN_FILE INPUT_PARAMS_FILENAME ascii
 MEAN_IN_FILE INPUT_PARAMS_FILENAME ascii
 COVAR_IN_FILE INPUT_PARAMS_FILENAME ascii
-MC_IN_FILE INPUT_PARAMS_FILENAME ascii
-MX_IN_FILE INPUT_PARAMS_FILENAME ascii
 
 #endif
+
+$real_mat_spec
+$mc_spec
+$mx_spec
