@@ -1,6 +1,3 @@
 DENSE_CPT_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
-REAL_MAT_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
 MEAN_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
 COVAR_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
-MC_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
-MX_OUT_FILE OUTPUT_PARAMS_FILENAME ascii
