@@ -20,34 +20,22 @@ frame: 0 {
    }
 #endif
 
-   variable: presence__h3k27me3 {
-     type: discrete observed 2:2 cardinality CARD_PRESENCE;
-
-     conditionalparents: CONDITIONALPARENTS_PRESENCE;
-   }
-
    variable: h3k27me3 {
      type: continuous observed 0:0;
 
-     switchingparents: presence__h3k27me3(0) using mapping("map_parent");
-
-     conditionalparents: CONDITIONALPARENTS_NIL_CONTINUOUS | CONDITIONALPARENTS_OBS using mixture collection("collection_seg_h3k27me3") MAPPING_OBS;
+     conditionalparents: CONDITIONALPARENTS_OBS
+                         using mixture collection("collection_seg_h3k27me3")
+                         MAPPING_OBS;
 
      weight: scale 1.000000;
-   }
-
-   variable: presence__h3k36me3 {
-     type: discrete observed 3:3 cardinality CARD_PRESENCE;
-
-     conditionalparents: CONDITIONALPARENTS_PRESENCE;
    }
 
    variable: h3k36me3 {
      type: continuous observed 1:1;
 
-     switchingparents: presence__h3k36me3(0) using mapping("map_parent");
-
-     conditionalparents: CONDITIONALPARENTS_NIL_CONTINUOUS | CONDITIONALPARENTS_OBS using mixture collection("collection_seg_h3k36me3") MAPPING_OBS;
+     conditionalparents: CONDITIONALPARENTS_OBS
+                         using mixture collection("collection_seg_h3k36me3")
+                         MAPPING_OBS;
 
      weight: scale 1.013915;
    }
@@ -81,7 +69,7 @@ frame: 1 {
      conditionalparents: seg(-1) using DeterministicCPT("seg_seg_copy")
                          | seg(-1) using DeterministicCPT("seg_seg_copy")
                          | seg(-1) using DenseCPT("seg_seg");
-     switchingparents: segTransition(0) using mapping("map_parent");
+     switchingparents: segTransition(0) using mapping("internal:copyParent");
    }
 
 #if CARD_SUBSEG > 1
@@ -90,38 +78,26 @@ frame: 1 {
      conditionalparents: subseg(-1) using DeterministicCPT("subseg_subseg_copy")
                          | seg(0), subseg(-1) using DenseCPT("seg_subseg_subseg")
                          | seg(0) using DenseCPT("seg_subseg");
-     switchingparents: segTransition(0) using mapping("map_parent");
+     switchingparents: segTransition(0) using mapping("internal:copyParent");
    }
 #endif
-
-   variable: presence__h3k27me3 {
-     type: discrete observed 2:2 cardinality CARD_PRESENCE;
-
-     conditionalparents: CONDITIONALPARENTS_PRESENCE;
-   }
 
    variable: h3k27me3 {
      type: continuous observed 0:0;
 
-     switchingparents: presence__h3k27me3(0) using mapping("map_parent");
-
-     conditionalparents: CONDITIONALPARENTS_NIL_CONTINUOUS | CONDITIONALPARENTS_OBS using mixture collection("collection_seg_h3k27me3") MAPPING_OBS;
+     conditionalparents: CONDITIONALPARENTS_OBS
+                         using mixture collection("collection_seg_h3k27me3")
+                         MAPPING_OBS;
 
      weight: scale 1.000000;
-   }
-
-   variable: presence__h3k36me3 {
-     type: discrete observed 3:3 cardinality CARD_PRESENCE;
-
-     conditionalparents: CONDITIONALPARENTS_PRESENCE;
    }
 
    variable: h3k36me3 {
      type: continuous observed 1:1;
 
-     switchingparents: presence__h3k36me3(0) using mapping("map_parent");
-
-     conditionalparents: CONDITIONALPARENTS_NIL_CONTINUOUS | CONDITIONALPARENTS_OBS using mixture collection("collection_seg_h3k36me3") MAPPING_OBS;
+     conditionalparents: CONDITIONALPARENTS_OBS
+                         using mixture collection("collection_seg_h3k36me3")
+                         MAPPING_OBS;
 
      weight: scale 1.013915;
    }
