@@ -1,7 +1,7 @@
 1.2.0:
 
-* now requires a new version of GMTK (at least 20110624-368c7a027f88)
-  for increased speed
+* now requires a new version of GMTK (at least 0.1 f6e7c01e2b27 (ticket161)) for increased speed
+* segway: covariances have TEMPORARILY been untied until they are supported again in the new GMTK
 * segway: now has experimental Torque support. PBS and PBS Pro will
   probably work with some changes--please e-mail Michael if you want
   to help with identifying the necessary changes (thanks to Jay Hesselberth)
@@ -13,6 +13,8 @@
 * segway: LSF: fix bug where wrapper script sometimes did not delete
   temporary observation files after a crash
 * segway: more informative error message when supervision labels overlap each other
+* segway: segway.sh has cd command in addition to segway command
+* segway: MC/MX/REAL_MAT direct parameters are no longer trained (MEAN/COVAR/DENSECPT parameters are)
 * segway-layer: add --bigBed option, which works if you have
   bedToBigBed in your path
 * segway: add --bigBed option which calls segway-layer --bigBed
@@ -21,6 +23,7 @@
 * segway-winner: fix issue #21. Now works on Python 2.5.1
 * installation: always require drmaa. setuptools extras_require wasn't that useful in practice
 * test: when files differ, output is in a form that makes it easier to diff
+* test: update for new GMTK
 
 1.1.0:
 
